--- a/src/components/linearProgress/_linearProgress.scss
+++ b/src/components/linearProgress/_linearProgress.scss
@@ -40,15 +40,11 @@ $bar-height:5px;
 
   &[mode=indeterminate] {
     .bar1 {
-      left: 50%;
-      width: 10%;
-      @include animation(indeterminate1 5s infinite linear);
+      @include animation(indeterminate1 4s infinite linear);
     }
 
     .bar2 {
-      left: 0%;
-      width: 0%;
-      @include animation(indeterminate2 5s infinite linear);
+      @include animation(indeterminate2 4s infinite linear);
     }
   }
 
@@ -85,130 +81,139 @@ $bar-height:5px;
 
 @include keyframes(indeterminate1) {
   0% {
-    width: 0%;
-    left: 0%;
+    transform: translateX(-25%) scale(.5, 1);
+    -webkit-transform: translateX(-25%) scale(.5, 1);
   }
   10% {
-    width: 30%;
-    left: 100%;
+    transform: translateX(25%) scale(.5, 1);
+    -webkit-transform: translateX(25%) scale(.5, 1);
   }
   19.99% {
-    width: 30%;
-    left: 100%;
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
   20% {
-    width: 0%;
-    left: 0%;
+    transform: translateX(-37.5%) scale(.25, 1);
+    -webkit-transform: translateX(-37.5%) scale(.25, 1);
   }
   30% {
-    width: 80%;
-    left: 100%;
+    transform: translateX(37.5%) scale(.25, 1);
+    -webkit-transform: translateX(37.5%) scale(.25, 1);
   }
-  30.01% {
-    width: 0%;
-    left: 0%;
+  34.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
-  40% {
-    width: 5%;
-    left: 30%;
+  36.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
-  50% {
-    width: 50%;
-    left: 100%;
+  37% {
+    transform: translateX(-37.5%) scale(.25, 1);
+    -webkit-transform: translateX(-37.5%) scale(.25, 1);
   }
-  50.01% {
-    width: 0%;
-    left: 0%;
+  47% {
+    transform: translateX(20%) scale(.25, 1);
+    -webkit-transform: translateX(20%) scale(.25, 1);
   }
-  60% {
-    width: 60%;
-    left: 20%;
+  52% {
+    transform: translateX(35%) scale(.05, 1);
+    -webkit-transform: translateX(35%) scale(.05, 1);
+  }
+  55% {
+    transform: translateX(35%) scale(.1, 1);
+    -webkit-transform: translateX(35%) scale(.1, 1);
+  }
+  58% {
+    transform: translateX(50%) scale(.1, 1);
+    -webkit-transform: translateX(50%) scale(.1, 1);
+  }
+  61.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
+  }
+  69.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
   70% {
-    width: 5%;
-    left: 100%;
-  }
-  70.01% {
-    width: 0%;
-    left: 0%;
+    transform: translateX(-37.5%) scale(.25, 1);
+    -webkit-transform: translateX(-37.5%) scale(.25, 1);
   }
   80% {
-    width: 50%;
-    left: 30%;
+    transform: translateX(20%) scale(.25, 1);
+    -webkit-transform: translateX(20%) scale(.25, 1);
   }
-  90% {
-    width: 10%;
-    left: 80%;
+  85% {
+    transform: translateX(35%) scale(.05, 1);
+    -webkit-transform: translateX(35%) scale(.05, 1);
+  }
+  88% {
+    transform: translateX(35%) scale(.1, 1);
+    -webkit-transform: translateX(35%) scale(.1, 1);
+  }
+  91% {
+    transform: translateX(50%) scale(.1, 1);
+    -webkit-transform: translateX(50%) scale(.1, 1);
+  }
+  92.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
+  }
+  93% {
+    transform: translateX(-50%) scale(0, 1);
+    -webkit-transform: translateX(-50%) scale(0, 1);
   }
   100% {
-    width: 20%;
-    left: 100%;
+    transform: translateX(-25%) scale(.5, 1);
+    -webkit-transform: translateX(-25%) scale(.5, 1);
   }
 }
 
 @include keyframes(indeterminate2) {
   0% {
-    width: 0%;
-    left: 0%;
+    transform: translateX(-50%) scale(0, 1);
+    -webkit-transform: translateX(-50%) scale(0, 1);
   }
-  10% {
-    width: 60%;
+  25.99%{
+    transform: translateX(-50%) scale(0, 1);
+    -webkit-transform: translateX(-50%) scale(0, 1);
   }
-  19.99% {
-    width: 40%;
-    left: 100%;
+  28% {
+    transform: translateX(-37.5%) scale(.25, 1);
+    -webkit-transform: translateX(-37.5%) scale(.25, 1);
   }
-  20% {
-    width: 0%;
-    left: 0%;
+  38% {
+    transform: translateX(37.5%) scale(.25, 1);
+    -webkit-transform: translateX(37.5%) scale(.25, 1);
   }
-  25% {
-    width: 10%;
-    left: 10%;
+  42.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
-  30% {
-    width: 40%;
-    left: 30%;
+  46.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
-  40% {
-    width: 60%;
-    left: 100%;
-  }
-  40.01% {
-    width: 0%;
-    left: 0%;
+  49.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
   50% {
-    width: 10%;
-    left: 40%;
+    transform: translateX(-50%) scale(0, 1);
+    -webkit-transform: translateX(-50%) scale(0, 1);
   }
   60% {
-    width: 30%;
-    left: 100%;
-  }
-  60.01% {
-    width: 0%;
-    left: 0%;
+    transform: translateX(-25%) scale(.5, 1);
+    -webkit-transform: translateX(-25%) scale(.5, 1);
   }
   70% {
-    width: 10%;
-    left: 40%;
+    transform: translateX(25%) scale(.5, 1);
+    -webkit-transform: translateX(25%) scale(.5, 1);
   }
-  80% {
-    width: 5%;
-    left: 100%;
-  }
-  80.01% {
-    width: 0%;
-    left: 0%;
-  }
-  90% {
-    width: 70%;
-    left: 10%;
-  }
-  100% {
-    width: 10%;
-    left: 100%;
+  79.99% {
+    transform: translateX(50%) scale(0, 1);
+    -webkit-transform: translateX(50%) scale(0, 1);
   }
 }
 
