--- a/src/components/linearProgress/_linearProgress.scss
+++ b/src/components/linearProgress/_linearProgress.scss
@@ -11,14 +11,12 @@ $bar-height:5px;
     height: $bar-height;
     background-color: $color-blue-100;
     top: $bar-height;
-    transform: translate(0, 5px) scale(1, 0);
-    -webkit-transform: translate(0, 5px) scale(1, 0);
+    @include transform(translate(0, 5px) scale(1, 0));
     @include transition(all .3s linear);
   }
 
   .container.ready {
-    transform: translate(0, 0) scale(1, 1);
-    -webkit-transform: translate(0, 0) scale(1, 1);
+    @include transform(translate(0, 0) scale(1, 1));
   }
 
   .bar {
@@ -81,152 +79,117 @@ $bar-height:5px;
 
 @include keyframes(indeterminate1) {
   0% {
-    transform: translateX(-25%) scale(.5, 1);
-    -webkit-transform: translateX(-25%) scale(.5, 1);
+    @include transform(translateX(-25%) scale(.5, 1));
   }
   10% {
-    transform: translateX(25%) scale(.5, 1);
-    -webkit-transform: translateX(25%) scale(.5, 1);
+    @include transform(translateX(25%) scale(.5, 1));
   }
   19.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   20% {
-    transform: translateX(-37.5%) scale(.25, 1);
-    -webkit-transform: translateX(-37.5%) scale(.25, 1);
+    @include transform(translateX(-37.5%) scale(.25, 1));
   }
   30% {
-    transform: translateX(37.5%) scale(.25, 1);
-    -webkit-transform: translateX(37.5%) scale(.25, 1);
+    @include transform(translateX(37.5%) scale(.25, 1));
   }
   34.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   36.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   37% {
-    transform: translateX(-37.5%) scale(.25, 1);
-    -webkit-transform: translateX(-37.5%) scale(.25, 1);
+    @include transform(translateX(-37.5%) scale(.25, 1));
   }
   47% {
-    transform: translateX(20%) scale(.25, 1);
-    -webkit-transform: translateX(20%) scale(.25, 1);
+    @include transform(translateX(20%) scale(.25, 1));
   }
   52% {
-    transform: translateX(35%) scale(.05, 1);
-    -webkit-transform: translateX(35%) scale(.05, 1);
+    @include transform(translateX(35%) scale(.05, 1));
   }
   55% {
-    transform: translateX(35%) scale(.1, 1);
-    -webkit-transform: translateX(35%) scale(.1, 1);
+    @include transform(translateX(35%) scale(.1, 1));
   }
   58% {
-    transform: translateX(50%) scale(.1, 1);
-    -webkit-transform: translateX(50%) scale(.1, 1);
+    @include transform(translateX(50%) scale(.1, 1));
   }
   61.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   69.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   70% {
-    transform: translateX(-37.5%) scale(.25, 1);
-    -webkit-transform: translateX(-37.5%) scale(.25, 1);
+    @include transform(translateX(-37.5%) scale(.25, 1));
   }
   80% {
-    transform: translateX(20%) scale(.25, 1);
-    -webkit-transform: translateX(20%) scale(.25, 1);
+    @include transform(translateX(20%) scale(.25, 1));
   }
   85% {
-    transform: translateX(35%) scale(.05, 1);
-    -webkit-transform: translateX(35%) scale(.05, 1);
+    @include transform(translateX(35%) scale(.05, 1));
   }
   88% {
-    transform: translateX(35%) scale(.1, 1);
-    -webkit-transform: translateX(35%) scale(.1, 1);
+    @include transform(translateX(35%) scale(.1, 1));
   }
   91% {
-    transform: translateX(50%) scale(.1, 1);
-    -webkit-transform: translateX(50%) scale(.1, 1);
+    @include transform(translateX(50%) scale(.1, 1));
   }
   92.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   93% {
-    transform: translateX(-50%) scale(0, 1);
-    -webkit-transform: translateX(-50%) scale(0, 1);
+    @include transform(translateX(-50%) scale(0, 1));
   }
   100% {
-    transform: translateX(-25%) scale(.5, 1);
-    -webkit-transform: translateX(-25%) scale(.5, 1);
+    @include transform(translateX(-25%) scale(.5, 1));
   }
 }
 
 @include keyframes(indeterminate2) {
   0% {
-    transform: translateX(-50%) scale(0, 1);
-    -webkit-transform: translateX(-50%) scale(0, 1);
+    @include transform(translateX(-50%) scale(0, 1));
   }
   25.99%{
-    transform: translateX(-50%) scale(0, 1);
-    -webkit-transform: translateX(-50%) scale(0, 1);
+    @include transform(translateX(-50%) scale(0, 1));
   }
   28% {
-    transform: translateX(-37.5%) scale(.25, 1);
-    -webkit-transform: translateX(-37.5%) scale(.25, 1);
+    @include transform(translateX(-37.5%) scale(.25, 1));
   }
   38% {
-    transform: translateX(37.5%) scale(.25, 1);
-    -webkit-transform: translateX(37.5%) scale(.25, 1);
+    @include transform(translateX(37.5%) scale(.25, 1));
   }
   42.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   46.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   49.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
   50% {
-    transform: translateX(-50%) scale(0, 1);
-    -webkit-transform: translateX(-50%) scale(0, 1);
+    @include transform(translateX(-50%) scale(0, 1));
   }
   60% {
-    transform: translateX(-25%) scale(.5, 1);
-    -webkit-transform: translateX(-25%) scale(.5, 1);
+    @include transform(translateX(-25%) scale(.5, 1));
   }
   70% {
-    transform: translateX(25%) scale(.5, 1);
-    -webkit-transform: translateX(25%) scale(.5, 1);
+    @include transform(translateX(25%) scale(.5, 1));
   }
   79.99% {
-    transform: translateX(50%) scale(0, 1);
-    -webkit-transform: translateX(50%) scale(0, 1);
+    @include transform(translateX(50%) scale(0, 1));
   }
 }
 
 @include keyframes(query) {
   0% {
     opacity: 1;
-    transform: translateX(35%) scale(.3, 1);
-    -webkit-transform: translateX(35%) scale(.3, 1);
+    @include transform(translateX(35%) scale(.3, 1));
   }
   100% {
     opacity: 0;
-    transform: translateX(-50%) scale(0, 1);
-    -webkit-transform: translateX(-50%) scale(0, 1);
+    @include transform(translateX(-50%) scale(0, 1));
   }
 }
 
