feature(swipe): added Swipe service and directive
Tabs now provides horizontal pan and swipe features for both internal and external content views.

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -77,6 +77,10 @@ material-tabs[center] .tabs-header:not(.tab-paginating) .tabs-header-items {
 .tabs-content {
   overflow: hidden;
   width: 100%;
+
+  .tab-content {
+    height : 100%;
+  }
 }
 
 material-tabs-ink-bar {
