--- a/src/components/tabs/demos/demo1/index.html
+++ b/src/components/tabs/demos/demo1/index.html
@@ -14,43 +14,73 @@
     </material-tabs>
 
     <div class="animate-switch-container" ng-switch on="data.selectedIndex">
-        <div class="animate-switch tab1" ng-switch-when="0">
+        <div class="animate-switch tab1"
+             ng-switch-when="0"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #1<br/>
             Selection index = 0
         </div>
-        <div class="animate-switch tab2" ng-switch-when="1">
+        <div class="animate-switch tab2"
+             ng-switch-when="1"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #2<br/>
             Selection index = 1
         </div>
-        <div class="animate-switch tab3" ng-switch-when="2">
+        <div class="animate-switch tab3"
+             ng-switch-when="2"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #3<br/>
             Selection index = 2
         </div>
-        <div class="animate-switch tab4" ng-switch-when="3">
+        <div class="animate-switch tab4"
+             ng-switch-when="3"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #4<br/>
             Selection index = 3
         </div>
-        <div class="animate-switch tab5" ng-switch-when="4">
+        <div class="animate-switch tab5"
+             ng-switch-when="4"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #5<br/>
             Selection index = 4
         </div>
-        <div class="animate-switch tab6" ng-switch-when="5">
+        <div class="animate-switch tab6"
+             ng-switch-when="5"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #6<br/>
             Selection index = 5
         </div>
-        <div class="animate-switch tab7" ng-switch-when="6">
+        <div class="animate-switch tab7"
+             ng-switch-when="6"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #7<br/>
             Selection index = 6
         </div>
-        <div class="animate-switch tab8" ng-switch-when="7">
+        <div class="animate-switch tab8"
+             ng-switch-when="7"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #8<br/>
             Selection index = 7
         </div>
-        <div class="animate-switch tab9" ng-switch-when="8">
+        <div class="animate-switch tab9"
+             ng-switch-when="8"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #9<br/>
             Selection index = 8
         </div>
-        <div class="animate-switch tab10" ng-switch-when="9">
+        <div class="animate-switch tab10"
+             ng-switch-when="9"
+             material-swipe-left="next()"
+             material-swipe-right="previous()" >
             View for Item #10<br/>
             Selection index = 9
         </div>
